# plansheet-scanner

./: .cursorrules  .gitignore  ADAPTIVE_LEARNING_SUMMARY.md  AI_TOOLS_QUICK_REFERENCE.md  AI_TOOLS_RULES.md  AS_BUILT_TRAINING_GUIDE.md  AUTOCAD_SYMBOL_TRAINING_SUMMARY.md  CHANGELOG.md  CODESPACES_SETUP.md  CONTRIBUTING.md  DISCIPLINE_CLASSIFICATION_COMPLETION_SUMMARY.md  DISCIPLINE_CLASSIFICATION_TESTING_SUMMARY.md  DWG_TRAINING_SOLUTION_SUMMARY.md  ENHANCED_ML_PIPELINE_GUIDE.md  ENHANCED_MODEL_ACHIEVEMENTS.md  ENHANCED_ROADWAY_DETECTOR_SUMMARY.md  FINAL_SUMMARY.txt  FOUNDATION_ELEMENTS_COMPLETION_SUMMARY.md  FOUNDATION_ELEMENTS_ROADMAP.md  GITHUB_UPLOAD_FINAL_STATUS.md  GITHUB_UPLOAD_PREPARATION_GUIDE.md  INDEX_SYMBOL_RECOGNITION_TESTING_SUMMARY.md  LightweightTest.py  ML_ENHANCED_PLAN_CAPABILITIES.md  ML_GETTING_STARTED_GUIDE.md  ML_SYSTEM_REVIEW.md  MODERN_PYTHON_SETUP_GUIDE.md  NEXT_STEPS_ANALYSIS.md  PRIORITY_1_COMPLETION_SUMMARY.md  PRIORITY_2_COMPLETION_SUMMARY.md  PRIORITY_3_COMPLETION_SUMMARY.md  PRIORITY_4_COMPLETION_SUMMARY.md  PRIORITY_4_ROADMAP.md  PRIORITY_ROADMAP.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README.txt  README_AI_Code_Companion.md  README_AutoCAD_Symbol_Training.md  README_FOR_NEXT_AGENT.md  (+113 more)
.github/: pull_request_template.md
Tables/: WIM_Equipment.csv  highlight_cables_variations.py
ai_engineer_data/: as_built_AB-001.json  as_built_AB-002.json  as_built_AB-003.json  as_built_AB-004.json  as_built_AB-005.json  as_built_AB-006.json  as_built_AB-007.json  as_built_AB-008.json  as_built_AB-009.json  as_built_AB-010.json  as_built_AB-011.json  as_built_AB-012.json  as_built_AB-013.json  as_built_AB-014.json  as_built_AB-015.json  as_built_AB-016.json  as_built_AB-017.json  as_built_AB-018.json  as_built_AB-019.json  as_built_AB-020.json  as_built_AB-021.json  as_built_AB-022.json  as_built_AB-023.json  as_built_AB-024.json  as_built_AB-025.json  as_built_AB-026.json  as_built_AB-027.json  as_built_AB-028.json  as_built_AB-029.json  as_built_AB-030.json  as_built_AB-031.json  as_built_AB-032.json  as_built_AB-033.json  as_built_AB-034.json  as_built_AB-035.json  as_built_AB-036.json  as_built_AB-037.json  as_built_AB-038.json  as_built_AB-039.json  as_built_AB-040.json  (+60 more)
as_built_drawings/: .gitignore
config/: requirements.txt  settings.json  setup_env.py  symbol_training_config.json  training_config.json
data/: README.md
docs/: 01-Project_Overview_and_Best_Practices.md  02-Directory_Structure_Guide.md  03-Environment_Management_Python_Tools.md  04-Code_Style_And_Linting.md  05-Dependency_Management.md  11-15.md  16-20.md  21-25.md  26-30.md  6-10.md  AGENT_ARCHITECTURE.md  ENTITY_MATCHER.md  FILE_WATCHER.md  FINE_TUNING.md  MEMORY_STORE.md  MODEL_SETUP.md  PERFORMANCE_REVIEW_GUIDE.md  TROUBLESHOOTING.md  USAGE.md  additionaltopics.md  agentguide.md  cable_entity_pipeline.md
extracted_symbols/: 20250827_092931_test_drawing_symbols.json  20250827_093017_test_drawing_symbols.json  20250827_113107_traffic_plan_001_symbols.json
highlighted_plans/: comprehensive_highlighting_report.json  report_001.json  report_002.json
improved_ai_data/: as_built_AB-001.json  as_built_AB-002.json  as_built_AB-003.json  as_built_AB-004.json  as_built_AB-005.json  as_built_AB-006.json  as_built_AB-007.json  as_built_AB-008.json  as_built_AB-009.json  as_built_AB-010.json  as_built_AB-011.json  as_built_AB-012.json  as_built_AB-013.json  as_built_AB-014.json  as_built_AB-015.json  as_built_AB-016.json  as_built_AB-017.json  as_built_AB-018.json  as_built_AB-019.json  as_built_AB-020.json  as_built_AB-021.json  as_built_AB-022.json  as_built_AB-023.json  as_built_AB-024.json  as_built_AB-025.json  as_built_AB-026.json  as_built_AB-027.json  as_built_AB-028.json  as_built_AB-029.json  as_built_AB-030.json  as_built_AB-031.json  as_built_AB-032.json  as_built_AB-033.json  as_built_AB-034.json  as_built_AB-035.json  as_built_AB-036.json  as_built_AB-037.json  as_built_AB-038.json  as_built_AB-039.json  as_built_AB-040.json  (+503 more)
improved_ai_models/: discipline_classifier.pkl  error_detector.pkl  feature_scaler.pkl  label_encoder.pkl  violation_detector.pkl
models/: review_feedback.jsonl  training_data.pkl
output/: M01-17-ITS-Tolling-2b_20250815_095735_report.json  M01-17-ITS-Tolling-2b_20250815_115020_report.json  M01-17-ITS-Tolling-2b_20250815_115431_report.json  M01-17-ITS-Tolling-2b_20250815_120239_report.json  M01-17-ITS-Tolling-2b_20250815_124252_report.json  M01-17-ITS-Tolling-2b_20250815_131406_report.json  M01-17-ITS-Tolling-2b_20250815_131722_report.json  M01-17-ITS-Tolling-2b_20250815_133331_report.json  M01-17-ITS-Tolling-2b_20250815_134126_report.json  M01-17-ITS-Tolling-2b_20250815_135140_report.json  M01-17-ITS-Tolling-2b_match_report.json  plans_20250827_153243_report.json  smoke_test.csv
real_highlighted_plans/: comprehensive_highlighting_report.json  report_001.json  report_002.json  report_003.json
real_world_data/: drawing_001.json  drawing_002.json  drawing_003.json  drawing_004.json  drawing_005.json
scripts/: conceptual_plans.csv  extract_plan_sheets.py  legend_read.ipynb  legend_read.py  main.ipynb  output.kmz  setup_dev_environment.py
src/: __init__.py
src/cli/: overlay.py  (+11 more)
symbol_training_data/: as_built_20250825_154217_traffic_plan_001.json  as_built_20250827_092931_test_drawing.json  as_built_20250827_093017_test_drawing.json  as_built_20250827_113107_traffic_plan_001.json  symbol_SYM-DRAINAGE-002.json  symbol_SYM-DRAINAGE-004.json  symbol_SYM-DRAINAGE-008.json  symbol_SYM-DRAINAGE-012.json  symbol_SYM-DRAINAGE-015.json  symbol_SYM-DRAINAGE-017.json  symbol_SYM-DRAINAGE-020.json  symbol_SYM-DRAINAGE-025.json  symbol_SYM-DRAINAGE-027.json  symbol_SYM-DRAINAGE-029.json  symbol_SYM-DRAINAGE-032.json  symbol_SYM-DRAINAGE-034.json  symbol_SYM-DRAINAGE-040.json  symbol_SYM-DRAINAGE-042.json  symbol_SYM-DRAINAGE-047.json  symbol_SYM-DRAINAGE-048.json  symbol_SYM-ELECTRICAL-001.json  symbol_SYM-ELECTRICAL-005.json  symbol_SYM-ELECTRICAL-008.json  symbol_SYM-ELECTRICAL-010.json  symbol_SYM-ELECTRICAL-014.json  symbol_SYM-ELECTRICAL-019.json  (+52 more)
(+167 files in other folders)
